world invited me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <body>
         <p>
-            hello world
+            hello world, i am with you.
         </p>
     </body>
 </head>
