--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <body>
         <p>
             hello world, i am with you.
+            git -a commit
+            hello world
         </p>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
     </body>
 </head>
 <body>
